--- a/index.Rmd
+++ b/index.Rmd
@@ -8,15 +8,6 @@ output:
     theme: leonids
     highlight: github
 ---
-> <span style="color: #ba0000;">Cases: 0000 </span>  
-   <span style="color: black;">Deaths: 0000 </span> 
-
-```{r, echo=FALSE, out.width= 600, fig.cap="", fig.align='left'}
-knitr::include_graphics("covid_anim_plot.gif")
-```
-
-## Number of Coronavirus cases by NHS Health Board
-
 ```{r echo=FALSE, fig.align='center', message=FALSE, warning=FALSE, paged.print=FALSE}
 # get todays dates and times
 library(dplyr)
@@ -33,11 +24,38 @@ library(gghighlight)
 library(hrbrthemes)
 ```
 
+```{r echo=FALSE, fig.align='right', message=FALSE, warning=FALSE, paged.print=FALSE, include= FALSE}
+#load total cases for Scotland
+scotland_totals = read_csv("data/scotland_totals.csv")
+
+scotland_totals = scotland_totals %>% 
+mutate(new_cases = (ConfirmedCases - lag(ConfirmedCases)))  %>% # new daily cases 
+mutate(pct_change = new_cases / lag(ConfirmedCases) * 100) # percentage change
+
+current_cases = scotland_totals %>% 
+  filter(Date == max(Date) ) %>% 
+  select(ConfirmedCases)
+  
+current_deaths = scotland_totals %>% 
+  filter(Date == max(Date) ) %>% 
+  select(Deaths)
+
+```
+
 ```{r echo=FALSE, fig.align='center', message=FALSE, warning=FALSE, paged.print=FALSE}
 # get today's data
 date= today()
 date_char = as.character.Date(date)
+
 ```
+> <span style="color: #ba0000;">Cases: `r current_cases` </span>  <span style="color: black;">Deaths: `r current_deaths` </span> 
+
+```{r, echo=FALSE, out.width= 600, fig.cap="", fig.align='left'}
+knitr::include_graphics("covid_anim_plot.gif")
+```
+
+## Number of Coronavirus cases by NHS Health Board
+
 
 ```{r echo=FALSE, fig.align='center', message=FALSE, warning=FALSE, paged.print=FALSE}
 # scrape data from the website into a table
@@ -72,8 +90,9 @@ hb_shp = st_read("data/SG_NHS_HealthBoards_2019.shp") %>%
 
 hb_cases = left_join(hb_shp, cases_latest, by = "HBName")
 
-#st_write(hb_cases, "hb_cases.shp")
-hb_cases = st_read("hb_cases.shp")
+
+#st_write(hb_cases, "hb_cases.shp", delete_layer = TRUE)
+#hb_cases = st_read("hb_cases.shp")
 
 
 ```
@@ -103,6 +122,7 @@ tmap_mode("plot")
 legend_title = paste0("Data from ", date_char)
 map_hb = tm_shape(hb_cases) +
   tm_polygons( col = "cases", 
+               n= 5,
                style = "jenks", 
                palette = "Reds",
                title = legend_title,
@@ -120,7 +140,7 @@ tmap_save(map_hb, "map_hb.png", dpi = 200)
 map_cases = tm_shape(hb_cases) +
   tm_borders() +
   tm_bubbles(col = "cases",
-             n = 6,
+             n = 5,
              style = "jenks",
              palette = "Reds",
              size = "cases",
@@ -144,7 +164,7 @@ The maps are created from data published by the Scottish Government
 ```{r echo=FALSE, fig.align='center', message=FALSE, warning=FALSE, paged.print=FALSE, }
 
 
-scotland_totals = read_csv("data/scotland_totals.csv")
+
 
 #  set theme
 theme_set(theme_minimal())
@@ -187,10 +207,36 @@ ggplot(covid_longer)+
 
 ```
 
-```{r echo=FALSE, fig.align='right', message=FALSE, warning=FALSE, paged.print=FALSE}
-#interctive map
+
+
+
+```{r eval=FALSE, fig.align='right', message=FALSE, warning=FALSE, include=FALSE, paged.print=FALSE}
+#produce animation
+
+covid = ggplot(scotland_totals)+
+  geom_line(aes(x=Date, y=Deaths), color='black') +
+  geom_point(aes(x=Date, y=Deaths), color='black')+
+  geom_line(aes(x=Date, y=ConfirmedCases), color='#ba0000') +
+  geom_point(aes(x=Date, y=ConfirmedCases), color='#ba0000')+
+  labs(y = "Cases") +
+  theme(panel.grid.minor = element_blank(),
+        panel.grid.major.x = element_blank()) +
+  scale_x_date(date_breaks = '1 week', date_labels = '%m %d') +
+  scale_linetype('')
+
+covid_anim = covid + transition_reveal(Date)
+
+anim_save("covid_anim_plot.gif", covid_anim)
+
+
 
 ```
+
+
+
+
+
+
 ## Interactive
 
 ```{r echo=FALSE, fig.align='right', message=FALSE, warning=FALSE, paged.print=FALSE}
