--- a/index.Rmd
+++ b/index.Rmd
@@ -264,4 +264,4 @@ The maps and plot are daily updated using data published by the Scottish Governm
 1. COVID-19 statistics ^[https://www.gov.scot/coronavirus-covid-19/]
 2. NHS Health Boards ^[https://www.spatialdata.gov.scot/geonetwork/srv/eng/catalog.search#/metadata/f12c3826-4b4b-40e6-bf4f-77b9ed01dc14]
 
-*"Historical"* cases up to 18th March come from `fantastic` work by [Tom White](http://tom-e-white.com/covid-19-uk-data/) at UK level.
+*'Historical'* cases up to 18th March come from `fantastic` work by [Tom White](http://tom-e-white.com/covid-19-uk-data/) at UK level.^[http://tom-e-white.com/covid-19-uk-data/]
