--- a/index.Rmd
+++ b/index.Rmd
@@ -166,9 +166,7 @@ map = tm_shape(cases_hb_rate100k) +
             frame = F,
             design.mode = F
            ) +
-  tm_credits("Cases data from: https://www.gov.scot/coronavirus-covid-19\n
-             Population data: NRS Population Estimates, mid-2018\n
-             Boundaries: SpatialData.gov.scot",
+  tm_credits("Cases: https://www.gov.scot/coronavirus-covid-19\nPopulation data: NRS Population Estimates, mid-2018\nBoundaries:  SpatialData.gov.scot",
              col = "grey50",
              position=c("left","top"), 
              align = "left",
@@ -176,7 +174,7 @@ map = tm_shape(cases_hb_rate100k) +
 # save graphic to png file
 tmap_save(
   tm = map,
-  filename = "hb_map_cases_rate.png",
+  filename = "output/hb_map_cases_rate.png",
   height = 6,
   width = 4,
   units = "in",
